--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Andes
 =======================================================
-  What the fu** is Andes.com? Well, one important fact is that we are better than amazon in several ways.
+  What is Andes.com? Well, one important fact is that we are better than amazon in several ways.
+  
+  Still in development...
 
